manifests/user/media/jackett.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
  namespace: media
  labels:
    app: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: app
          image: linuxserver/jackett:v0.12.1638-ls51
          ports:
            - containerPort: 9117
          volumeMounts:
            - name: jackett-config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            tcpSocket:
              port: 9117
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
      volumes:
        - name: jackett-config
          persistentVolumeClaim:
            claimName: jackett-config-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
      securityContext:
        fsGroup: 797
---
kind: Service
apiVersion: v1
metadata:
  name: jackett-svc
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 9117
  selector:
    app: jackett
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: jackett.underyx.me
      http:
        paths:
          - backend:
              serviceName: jackett-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - jackett.underyx.me
      secretName: jackett-tls
