manifests/user/media/plex.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      annotations:
        operator.1password.io/item-path: "vaults/aurora/items/plex-claim-token"
        operator.1password.io/item-name: plex-claim-token
      labels:
        app: plex
    spec:
      containers:
        - name: app
          image: plexinc/pms-docker:public
          ports:
            - containerPort: 32400
              hostPort: 32400
          volumeMounts:
            - name: plex-config
              mountPath: /config
            - name: plex-media
              mountPath: /media
            - name: plex-transcode
              mountPath: /transcode
          livenessProbe:
            tcpSocket:
              port: 32400
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 4000m
              memory: 4Gi
            requests:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: plex-transcode
          emptyDir:
            medium: Memory
            sizeLimit: 2Gi
        - name: plex-media
          persistentVolumeClaim:
            claimName: media-pvc
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
---
kind: Service
apiVersion: v1
metadata:
  name: plex-svc
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - name: plex
      port: 32400
      targetPort: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: plex.bence.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex-svc
                port:
                  number: 32400
