manifests/user/media/prowlarr.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: app
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: rtc
              mountPath: /dev/rtc
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 9696
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: rtc
          hostPath:
            path: /dev/rtc
      securityContext:
        fsGroup: 1000
---
kind: Service
apiVersion: v1
metadata:
  name: prowlarr-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 9696
      targetPort: 9696
  selector:
    app: prowlarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: prowlarr.bence.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: prowlarr-svc
                port:
                  number: 9696
