manifests/user/media/qbittorrent.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  namespace: media
  labels:
    app: qbittorrent
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: app
          image: linuxserver/qbittorrent:4.3.0202001241706-6844-07c22f8ubuntu18.04.1-ls46
          ports:
            - containerPort: 8080
            - containerPort: 45401
              hostPort: 45401
              protocol: TCP
            - containerPort: 45401
              hostPort: 45401
              protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-media
              mountPath: /media
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 200m
              memory: 512Mi
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: qbittorrent-media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
      securityContext:
        fsGroup: 797
---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: qbittorrent
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: qbittorrent.underyx.me
      http:
        paths:
          - backend:
              serviceName: qbittorrent-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - qbittorrent.underyx.me
      secretName: qbittorrent-tls
