manifests/user/media/readarr.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: readarr
  namespace: media
  labels:
    app: readarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: app
          image: lscr.io/linuxserver/readarr:develop
          ports:
            - name: http
              containerPort: 8787
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: rtc
              mountPath: /dev/rtc
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8787
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: readarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: rtc
          hostPath:
            path: /dev/rtc
      securityContext:
        fsGroup: 1000
---
kind: Service
apiVersion: v1
metadata:
  name: readarr-svc
  namespace: media
spec:
  ports:
    - name: http
      port: 8787
      targetPort: 8787
  selector:
    app: readarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: readarr.bence.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: readarr-svc
                port:
                  number: 8787
