manifests/user/media/sonarr.yml
---
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: app
          image: linuxserver/sonarr:3.0.1.497-ls74
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: sonarr-media
              mountPath: /media
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
            - name: rtc
              mountPath: /dev/rtc
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 8989
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
      volumes:
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: fs-root
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
              path: /
        - name: sonarr-media
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: media-fs
              clusterNamespace: rook-ceph
              path: /media
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: rtc
          hostPath:
            path: /dev/rtc
      securityContext:
        fsGroup: 797
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr-svc
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 8989
  selector:
    app: sonarr
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: media
spec:
  rules:
    - host: sonarr.underyx.me
      http:
        paths:
          - backend:
              serviceName: sonarr-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - sonarr.underyx.me
      secretName: sonarr-tls
